--- a/src/components/item/item.css
+++ b/src/components/item/item.css
@@ -1,9 +1,14 @@
 .item-lista {
 	align-items: center;
 	display: flex;
+	background-color: #ffffff;
+	border-radius: 5px;
+	box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 	flex-direction: column;
 	justify-content: center;
 	width: 200px;
+	padding: 10px 5px;
+	position: relative;
 }
 
 .imagem-caixa {
@@ -17,4 +22,11 @@
 
 .item-nome {
 	text-transform: capitalize;
+}
+
+.lista-coracao {
+	position: absolute;
+	top: 8px;
+	right: 8px;
+	width: 22px;
 }
